bad/invalid_cast_down_cast.example_compiler_output
ERROR
[1mbad/invalid_cast_down_cast.lat:8:6: [1;31merror: [0;1mincompatible types: cannot assign variable of type `Y` with an expression of type `X`[m
	Y x = (X)null;
	    [1;32m^[m
